--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -130,6 +130,32 @@ section {
     gap: 25px;
 }
 
+#scrollToTopBtn {
+    z-index: 500;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    border: 2px solid rgba(255, 255, 255, 0.30);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.32) 0%, rgba(255, 255, 255, 0.20) 100%);
+    backdrop-filter: blur(25px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px!important;
+    width: 40px!important;
+    height: 40px!important;
+    cursor: pointer;
+    border-radius: 50%;
+}
+#scrollToTopBtn > svg {
+    width: 25px;
+    height: 25px;
+}
+
+
+
+
 /* hero section style */
 
 
