--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -6,6 +6,9 @@
     h2{
         font-size: 24px!important;
     }
+    h3 {
+        font-size: 24px!important;
+    }
     h4{
         font-size: 24px!important;
     }
@@ -56,6 +59,24 @@
         flex-direction: column;
         gap: 25px!important;
     }
+    .staffs {
+        flex-wrap: wrap;
+        gap: 0!important;
+    }
+    .staff {
+        width: 50%;
+    }
+    .conclusion {
+        flex-direction: column;
+    }
+    .conclusion__text h2{
+        padding-bottom: 25px;
+    }
+    .footer__top {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+    }
     .hero__text::after {
         width: 330px!important;
     }
@@ -70,5 +91,11 @@
     }
     .lists__left::after {
         width: 100px!important;
+    }
+    .conclusion__img::after {
+        width: 250px!important;
+    }
+    .footer::after {
+        width: 250px!important;
     }
 }
