--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -101,6 +101,22 @@ button {
     gap: 10px;
 }
 
+.btn--primary {
+    border: none;
+    color: var(--white);
+    padding: 15px 20px;
+    cursor: pointer;
+    background: linear-gradient(90deg, var(--pink), var(--blue));
+    border-radius: 3.333px;
+    font-family: 'Sora';
+    font-size: 18px;
+    font-weight: bold;
+    transition: all 0.2s ease;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
 button:hover{
     transform: translateY(-5%);
     box-shadow: var(--pink-oppocite) 0px 7px 29px 0px;
@@ -128,6 +144,14 @@ section {
     display: flex;
     flex-direction: column;
     gap: 25px;
+}
+
+.title-staff {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #scrollToTopBtn {
@@ -445,4 +469,126 @@ section {
     object-fit: cover;
     width: 100%;
     border-radius: 30.333px;
+}
+
+/* staff */
+
+.staffs {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    padding: 50px 0;
+}
+
+.staff {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 25px;
+}
+
+.staff__name {
+    text-align: center;
+}
+
+.staff__img {
+    width: 140px;
+    height: 140px;
+}
+
+.staff__img > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+/* conclusion */
+
+.conclusion {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 120px;
+}
+
+.conclusion__img {
+    position: relative;
+}
+
+.conclusion__img > img {
+    border-radius: 30.333px;
+    width: 100%;
+}
+
+.conclusion__img::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -500;
+    width: 750px;
+    height: 400px;
+    transform: rotate(-0.25deg);
+    flex-shrink: 0;
+    border-radius: 50%;
+    background: linear-gradient(90deg, var(--pink), var(--blue));
+    filter: blur(100px);
+}
+
+/* footer */
+footer {
+    margin-top: 50px;
+    background: linear-gradient(92deg, rgba(255, 255, 255, 0.12) 0%, rgba(255, 255, 255, 0.08) 100%);
+    backdrop-filter: blur(25px);
+    padding: 50px 0;
+}
+.footer {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.footer::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    z-index: -500;
+    width: 500px;
+    height: 100%;
+    transform: rotate(-0.25deg);
+    flex-shrink: 0;
+    border-radius: 50%;
+    background: linear-gradient(90deg, var(--pink), var(--blue));
+    filter: blur(80px);
+}
+
+.footer__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer__top--navigation ul{
+    display: flex;
+    gap: 12px;
+}
+
+.footer__top--med{
+    display: flex;
+    gap: 25px;
+}
+
+.footer__top--med a {
+    width: 50px;
+    height: 50px;
+    background-color: var(--white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.footer__top--med img {
+    max-width: 25px;
 }
