--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,11 +6,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
     background: var(--bg-shade);
     color: var(--white);
+    
 }
 
 h1{
